<resources>
    <string name="shop_app_name">module_shop</string>

    <string name="shop_title_stamp_center">邮票中心</string>
    <string name="shop_main_banner_detail">明细</string>

    <string name="shop_detail_toast_get_good_info_error">获取商品信息失败</string>

    <string name="shop_good_toast_get_all_decoration_info_error">获取信息失败</string>

    <string name="shop_detail_toast_get_all_ex_record_error">获取兑换记录信息失败</string>
    <string name="shop_detail_toast_get_all_get_record_error">获取获取记录信息失败</string>

    <string name="shop_image_save_alert_dialog_title">是否保存</string>
    <string name="shop_image_save_alert_dialog_message">这张图片将保存到手机</string>

    <string name="shop_detail_pm">掌邮PM名片</string>
    <string name="shop_detail_equity_desc_title">权益说明</string>
    <string name="shop_detail_btn_exchange">兑换</string>

    <string name="shop_detail_title_stamp">邮货详情</string>
    <string name="shop_detail_title_decoration">装饰详情</string>

    <string name="shop_detail_right_tips_stamp">1、每个实物商品每人限兑换一次，已经兑换的商品不能退货换货也不予折现。\n2、在法律允许的范围内，本活动的最终解释权归红岩网校工作站所有。</string>
    <string name="shop_detail_right_tips_decoration">1、虚拟商品版权归红岩网校工作站所有。\n2、在法律允许的范围内，本活动的最终解释权归红岩网校工作站所有。</string>

    <string name="shop_detail_left_counts">库存量：</string>
    <string name="shop_detail_valid_time">有效期：</string>
    <string name="shop_detail_valid_time_suffix">天</string>
    <string name="shop_detail_stamp_count">余额：</string>
    <string name="shop_good_recycler_item_exchange">兑换</string>

    <string name="shop_exchange_detail_title">兑换详情</string>
    <string name="shop_exchange_detail_shop_detail">商品详情</string>
    <string name="shop_exchange_detail_good_name">商品名称:</string>
    <string name="shop_exchange_detail_good_price">商品价格:</string>
    <string name="shop_exchange_detail_good_exchange_time">交易时间:</string>
    <string name="shop_exchange_detail_good_status">商品状态:</string>
    <string name="shop_exchange_detail_good_price_suffix">邮豆</string>
    <string name="shop_exchange_detail_good_exchange_blank">  </string>
    <string name="shop_exchange_detail_good_status_collected">已领取</string>
    <string name="shop_exchange_detail_good_status_not_collected">待领取</string>
    <string name="shop_main_tip_to_received">你还有待领取的商品，请尽快领取</string>
    <string name="shop_main_banner_my_stamps">我的邮票</string>
    <string name="shop_stampdetail_title">邮票明细</string>
    <string name="shop_good_detail_not_collected">待领取</string>
    <string name="shop_get_detail_tv_cost_plus">+</string>
    <string name="shop_center_recycler_title_tip">请在个人资料里查看</string>
    <string name="shop_center_recycler_title_task">更多任务</string>
    <string name="shop_dialog_cancel">取消</string>

</resources>