<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="record"
            type="com.mredrock.cyxbs.shop.bean.ExRecord" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shop_exchange_detail_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:drawableStart="@drawable/shop_ic_back"
            android:drawablePadding="13dp"
            android:gravity="center"
            android:text="@string/shop_exchange_detail_title"
            android:textColor="#15315B"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <ImageView
            android:id="@+id/shop_exchange_detail_iv_bg_order"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:background="@drawable/shop_bg_exchange_detail_num_get"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_title"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{record.orderId}"
            android:textColor="@color/shop_white"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_title"
            android:layout_marginTop="84dp"
            android:layout_marginStart="21dp"
            app:layout_constraintStart_toStartOf="@+id/shop_exchange_detail_iv_bg_order" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_good_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_exchange_detail_shop_detail"
            android:textSize="16sp"
            android:textColor="#15315B"
            android:layout_marginTop="280dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_title_good_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@string/shop_exchange_detail_good_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_good_detail"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_good_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@{record.name}"
            app:layout_constraintStart_toEndOf="@+id/shop_exchange_detail_tv_title_good_name"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_good_detail"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_title_good_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@string/shop_exchange_detail_good_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_title_good_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_good_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@{String.valueOf(record.costStamp) + @string/shop_exchange_detail_good_price_suffix}"
            app:layout_constraintStart_toEndOf="@+id/shop_exchange_detail_tv_title_good_price"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_good_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_title_good_exchange_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@string/shop_exchange_detail_good_exchange_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_title_good_price"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_good_exchange_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@{record.date + @string/shop_exchange_detail_good_exchange_blank + record.moment}"
            app:layout_constraintStart_toEndOf="@+id/shop_exchange_detail_tv_title_good_exchange_time"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_good_price"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_title_good_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@string/shop_exchange_detail_good_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_title_good_exchange_time"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/shop_exchange_detail_tv_good_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#15315B"
            android:textSize="14sp"
            android:text="@{record.isCollected ? @string/shop_exchange_detail_good_status_collected : @string/shop_exchange_detail_good_status_not_collected}"
            app:layout_constraintStart_toEndOf="@+id/shop_exchange_detail_tv_title_good_status"
            app:layout_constraintTop_toBottomOf="@+id/shop_exchange_detail_tv_good_exchange_time"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>